complete prototype methods

--- a/jquery-lite/index.html
+++ b/jquery-lite/index.html
@@ -3,7 +3,7 @@
 </head>
 <body>
   Body
-  <div class="">
+  <div class="div" something="hello">
     div1
     <ul>
       ul1
@@ -12,7 +12,7 @@
       <li>li3</li>
     </ul>
   </div>
-  <div class="">
+  <div class="answer">
     div2
     <ul>
       ul1
